Adding a buy me a coffee feature

--- a/User Auth/templates/dashboard.html
+++ b/User Auth/templates/dashboard.html
@@ -59,7 +59,12 @@
           <img src="{{ url_for('static', filename='icons/upload.png') }}" />
           <a onclick="window.location.href='/files'">Upload</a>
         </div>
-        <button class="others"><span>Coffee</span>☕</button>
+        <button
+          class="others"
+          onclick="window.open('buymeacoffee.com/tenacity.web', '_blank')"
+        >
+          <span>Coffee</span>☕
+        </button>
         <a class="others1" onclick="window.location.href='/logout'"
           ><span>Log Out</span>→]</a
         >
