--- a/User Auth/templates/upload.html
+++ b/User Auth/templates/upload.html
@@ -56,7 +56,7 @@
           <a onclick="window.location.href='/files'">Upload</a>
           <div id="marker"></div>
           </div>
-          <button class="others"><span>Coffee</span>☕</button>
+          <button class="others" onclick="window.open('buymeacoffee.com/tenacity.web', '_blank')"><span>Coffee</span>☕</button>
           <a class="others1" onclick="window.location.href='/logout'"
             ><span>Log Out</span>→]</a
           >
