--- a/User Auth/templates/files.html
+++ b/User Auth/templates/files.html
@@ -3,6 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+    name="title"
+    content="Manage Your Files | Tenacity File Management"
+    />
+    <meta
+      name="description"
+      content="Organize, access, and manage your project files effortlessly with Tenacity's secure file management system."
+    />
+    <meta
+      name="keywords"
+      content="file management, project files, secure storage, file organization, Tenacity files"
+    />
     <title>Tenacity-My Files</title>
     <link
       rel="stylesheet"
