--- a/User Auth/templates/home.html
+++ b/User Auth/templates/home.html
@@ -3,6 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="title"
+      content="Welcome to Tenacity | Smarter Project Workflow"
+    />
+    <meta
+      name="description"
+      content="Boost productivity and simplify your workflow with Tenacity. All your project management tools in one place."
+    />
+    <meta
+      name="keywords"
+      content="project workflow, team productivity, online collaboration, task management, project tools, Tenacity home"
+    />
     <title>Tenacity-Home</title>
     <link
       rel="stylesheet"
