--- a/User Auth/templates/index.html
+++ b/User Auth/templates/index.html
@@ -3,6 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="title"
+      content="Tenacity | Simplify Your Project Management Workflow"
+    />
+    <meta
+      name="description"
+      content="Boost productivity with Tenacity – your all-in-one project management platform designed for teams of all sizes. Plan, collaborate, and deliver efficiently."
+    />
+    <meta
+      name="keywords"
+      content="project management, productivity, Tenacity, team collaboration"
+    />
     <link rel="stylesheet" href="/static/css/styles.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Source+Serif+Pro:wght@400;600;700&amp;display=swap"
