--- a/User Auth/templates/log-in.html
+++ b/User Auth/templates/log-in.html
@@ -3,6 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="title"
+      content="Login to Your Tenacity Account | Secure Access"
+    />
+    <meta
+      name="description"
+      content="Securely log in to your Tenacity account and manage your projects effortlessly. Access your dashboard and continue where you left off."
+    />
+    <meta
+      name="keywords"
+      content="Tenacity login, account access, project management login, secure login, user dashboard"
+    />
     <link
       rel="stylesheet"
       href="{{ url_for('static', filename='css/login-styles.css') }}"
