--- a/User Auth/templates/sign-in.html
+++ b/User Auth/templates/sign-in.html
@@ -3,6 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="title"
+      content="Create Your Tenacity Account | Sign Up for Free"
+    />
+    <meta
+      name="description"
+      content="Join Tenacity today and simplify your project management workflow. Sign up for free and collaborate with your team seamlessly."
+    />
+    <meta
+      name="keywords"
+      content="Tenacity sign up, create account, project management sign up, register for Tenacity, team collaboration signup"
+    />
     <link
       rel="stylesheet"
       href="{{ url_for('static', filename='css/login-styles.css') }}"
