--- a/User Auth/templates/upload.html
+++ b/User Auth/templates/upload.html
@@ -3,6 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+    name="title"
+    content="Tenacity Upload | Safe and Fast File Uploads"
+    />
+    <meta
+      name="description"
+      content="Upload files seamlessly to your Tenacity workspace. Fast, secure, and organized."
+    />
+    <meta
+      name="keywords"
+      content="secure uploads, file management, document upload, project file storage, Tenacity upload"
+    />
     <title>Tenacity-Upload Files</title>
     <link
       rel="stylesheet"
