--- a/User Auth/templates/index.html
+++ b/User Auth/templates/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="google-site-verification"
+      content="UhdTP_wRYGTbWETi_gbgGR1wZHrnn30aseXwR7PUgZU"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="title"
