--- a/User Auth/templates/index.html
+++ b/User Auth/templates/index.html
@@ -162,8 +162,9 @@
         </div>
       </div>
       <div id="divider"></div>
-      <h2>&copy; 2024 Tenacity. All rights reserved.</h2>
+      <h2>&copy; 2025 Tenacity. All rights reserved.</h2>
     </div>
     <script src="/static/javascript/index.js"></script>
   </body>
 </html>
+ssss
