--- a/User Auth/templates/dashboard.html
+++ b/User Auth/templates/dashboard.html
@@ -13,7 +13,7 @@
     />
     <meta
       name="keywords"
-      content="project dashboard, task overview, Tenacity dashboard, team collaboration, project insights"
+      content="project dashboard, task overview, Tenacity dashboard, team collaboration, project insights, metrics, data for cloud storage"
     />
     <link
       rel="stylesheet"
