--- a/User Auth/templates/files.html
+++ b/User Auth/templates/files.html
@@ -13,9 +13,9 @@
     />
     <meta
       name="keywords"
-      content="file management, project files, secure storage, file organization, Tenacity files"
+      content="file management, project files, secure storage, file organization, Tenacity files, cloud files, store files"
     />
-    <title>Tenacity-My Files</title>
+    <title>Tenacity | My Files</title>
     <link
       rel="stylesheet"
       href="{{ url_for('static', filename='css/files.css') }}"
