--- a/User Auth/templates/home.html
+++ b/User Auth/templates/home.html
@@ -13,7 +13,7 @@
     />
     <meta
       name="keywords"
-      content="project workflow, team productivity, online collaboration, task management, project tools, Tenacity home"
+      content="project workflow, team productivity, online collaboration, task management, project tools, Tenacity home, productivity"
     />
     <title>Tenacity-Home</title>
     <link
