--- a/User Auth/templates/log-in.html
+++ b/User Auth/templates/log-in.html
@@ -13,7 +13,7 @@
     />
     <meta
       name="keywords"
-      content="Tenacity login, account access, project management login, secure login, user dashboard"
+      content="Tenacity login, account access, project management login, secure login, user login, login"
     />
     <link
       rel="stylesheet"
