--- a/User Auth/templates/sign-in.html
+++ b/User Auth/templates/sign-in.html
@@ -13,7 +13,7 @@
     />
     <meta
       name="keywords"
-      content="Tenacity sign up, create account, project management sign up, register for Tenacity, team collaboration signup"
+      content="Tenacity sign up, create account, project management sign up, register for Tenacity, team collaboration signup, register"
     />
     <link
       rel="stylesheet"
