--- a/User Auth/templates/upload.html
+++ b/User Auth/templates/upload.html
@@ -13,7 +13,7 @@
     />
     <meta
       name="keywords"
-      content="secure uploads, file management, document upload, project file storage, Tenacity upload"
+      content="secure uploads, file management, document upload, project file storage, Tenacity upload, cloud upload, file upload, cloud"
     />
     <title>Tenacity-Upload Files</title>
     <link
