--- a/User Auth/templates/index.html
+++ b/User Auth/templates/index.html
@@ -17,7 +17,7 @@
     />
     <meta
       name="keywords"
-      content="project management, productivity, Tenacity, team collaboration, cloud, cloud storage, tenacity website"
+      content="project management, productivity, Tenacity, team collaboration, cloud, free cloud storage, tenacity website"
     />
     <link rel="stylesheet" href="/static/css/styles.css" />
     <link
