--- a/User Auth/static/css/styles.css
+++ b/User Auth/static/css/styles.css
@@ -483,7 +483,7 @@ span {
 /* Mobile Devices */
 @media (max-width: 768px) {
   body {
-    width: 100vw;
+    width: 100dvw;
     height: 300vh;
     overflow-x: hidden;
   }
@@ -496,7 +496,7 @@ span {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100vw;
+    width: 100dvw;
     height: 5vh;
   }
 
