--- a/User Auth/templates/index.html
+++ b/User Auth/templates/index.html
@@ -152,7 +152,7 @@
         <div
           target="_blank"
           id="twitter"
-          onclick="window.open('https://x.com/Tenacity_Web', '_blank')"
+          onclick="window.open('https://x.com/Tenacity_Cloud', '_blank')"
         >
           <img
             src="/static/icons/twitter.png"
