--- a/User Auth/templates/index.html
+++ b/User Auth/templates/index.html
@@ -142,7 +142,11 @@
             loading="lazy"
           />
         </div>
-        <div id="instagram">
+        <div
+          target="_blank"
+          id="instagram"
+          onclick="window.open('https://www.instagram.com/tenacity_cloud_storage/?next=%2F', '_blank')"
+        >
           <img
             src="/static/icons/instagram.png"
             alt="Review Icon"
