--- a/User Auth/templates/home.html
+++ b/User Auth/templates/home.html
@@ -97,10 +97,12 @@
         </div>
       </div>
     </div>
-    <div id="comment">
+    <div 
+      id="comment"
+      onclick="window.open('https://discord.gg/MHYVsQbM', '_blank')"
+      >
       <img
         src="{{ url_for('static', filename='icons/comments.png') }}"
-        onclick="window.open('https://x.com/Tenacity_Web', '_blank')"
       />
     </div>
     <div id="decoration-1"></div>
