--- a/User Auth/templates/home.html
+++ b/User Auth/templates/home.html
@@ -15,7 +15,7 @@
       name="keywords"
       content="project workflow, team productivity, online collaboration, task management, project tools, Tenacity home, productivity"
     />
-    <title>Tenacity-Home</title>
+    <title>Tenacity | Home</title>
     <link
       rel="stylesheet"
       href="{{ url_for('static', filename='css/home.css') }}"
@@ -97,13 +97,11 @@
         </div>
       </div>
     </div>
-    <div 
+    <div
       id="comment"
       onclick="window.open('https://discord.gg/MHYVsQbM', '_blank')"
-      >
-      <img
-        src="{{ url_for('static', filename='icons/comments.png') }}"
-      />
+    >
+      <img src="{{ url_for('static', filename='icons/comments.png') }}" />
     </div>
     <div id="decoration-1"></div>
     <div id="decoration-2"></div>
