--- a/User Auth/templates/sign-in.html
+++ b/User Auth/templates/sign-in.html
@@ -32,7 +32,7 @@
       href="{{ url_for('static', filename='icons/logo.png') }}"
       type="image/png"
     />
-    <title>Tenacity-Register</title>
+    <title>Tenacity | Register</title>
   </head>
   <body>
     <div class="header">
