--- a/User Auth/templates/upload.html
+++ b/User Auth/templates/upload.html
@@ -15,7 +15,7 @@
       name="keywords"
       content="secure uploads, file management, document upload, project file storage, Tenacity upload, cloud upload, file upload, cloud"
     />
-    <title>Tenacity-Upload Files</title>
+    <title>Tenacity | Upload Files</title>
     <link
       rel="stylesheet"
       href="{{ url_for('static', filename='css/upload.css') }}"
@@ -70,7 +70,7 @@
           </div>
           <button class="others" onclick="window.open('buymeacoffee.com/tenacity.web', '_blank')"><span>Coffee</span>☕</button>
           <a class="others1" onclick="window.location.href='/logout'"
-            ><span>Log Out</span>→]</a
+            ><span id="red">Log Out</span>→]</a
           >
         </div>
         <div id="main-content" >
