--- a/User Auth/static/css/upload.css
+++ b/User Auth/static/css/upload.css
@@ -99,6 +99,11 @@ body {
   margin: 0;
   color: red;
 }
+
+#red {
+  color: red;
+}
+
 span {
   background-color: #2c3e50;
   background-clip: text;
