Small UI changes

--- a/User Auth/templates/dashboard.html
+++ b/User Auth/templates/dashboard.html
@@ -75,7 +75,7 @@
           class="others"
           onclick="window.open('buymeacoffee.com/tenacity.web', '_blank')"
         >
-          <span>Coffee</span>☕
+          <span>Unlock More</span>🚀
         </button>
         <a class="others1" onclick="window.location.href='/logout'"
           ><span>Log Out</span>→]</a
