--- a/User Auth/static/css/upload.css
+++ b/User Auth/static/css/upload.css
@@ -90,9 +90,10 @@ body {
   text-align: center;
   margin-top: 20vh;
   border-radius: 5px;
+  font-size: 16px;
   width: 10vw;
   height: 6vh;
-  border: 1px solid grey;
+  border: 1px solid gold;
 }
 
 .others1 {
