Minor UI/UX change

--- a/User Auth/templates/home.html
+++ b/User Auth/templates/home.html
@@ -78,7 +78,7 @@
           <span>Unlock More</span>🚀
         </button>
         <a class="others1" onclick="window.location.href='/logout'"
-          ><span>Log Out</span>→]</a
+          ><span>Log Out</span>➜]</a
         >
       </div>
       <div id="main-content">
