--- a/User Auth/templates/upload.html
+++ b/User Auth/templates/upload.html
@@ -70,7 +70,7 @@
           </div>
           <button class="others" onclick="window.open('buymeacoffee.com/tenacity.web', '_blank')"><span>Unlock More</span>🚀</button>
           <a class="others1" onclick="window.location.href='/logout'"
-            ><span id="red">Log Out</span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">→]</a
+            ><span id="red">Log Out</span>➜]</a
           >
         </div>
         <div id="main-content" >
