--- a/User Auth/templates/files.html
+++ b/User Auth/templates/files.html
@@ -69,7 +69,7 @@
         </div>
         <button class="others" onclick="window.open('buymeacoffee.com/tenacity.web', '_blank')"><span>Unlock More</span>🚀</button>
         <a class="others1" onclick="window.location.href='/logout'"
-          ><span id="red">Log Out</span>→]</a
+          ><span id="red">Log Out</span>➜]</a
         >
       </div>
       <div id="main-content">
