--- a/User Auth/templates/index.html
+++ b/User Auth/templates/index.html
@@ -118,6 +118,8 @@
           width: 100%;
           height: 100%;
           color-scheme: light;
+          margin-top: 5vh;
+          border-radius: 0px;
         "
       ></iframe>
     </div>
