--- a/User Auth/templates/index.html
+++ b/User Auth/templates/index.html
@@ -120,6 +120,7 @@
           color-scheme: light;
           margin-top: 15vh;
           border-radius: 0px;
+          margin-bottom: 10vh;
         "
       ></iframe>
     </div>
