--- a/User Auth/templates/index.html
+++ b/User Auth/templates/index.html
@@ -103,15 +103,29 @@
         width: 100%;
       "
     >
-      <iframe
-        src="https://demo.arcade.software/U1IhFrdvOVQUdHQM26OA?embed&embed_mobile=tab&embed_desktop=inline&show_copy_link=true"
-        title="Tenacity - Home of Storage"
-        frameborder="0"
-        webkitallowfullscreen
-        mozallowfullscreen
-        allowfullscreen
-        allow="clipboard-write"
-      ></iframe>
+      <div id="demo">
+        <!--ARCADE EMBED START-->
+        <div
+          style="
+            position: relative;
+            padding-bottom: calc(47.364568081991216% + 41px);
+            height: 0;
+            width: 100%;
+          "
+        >
+          <iframe
+            src="https://demo.arcade.software/U1IhFrdvOVQUdHQM26OA?embed&embed_mobile=tab&embed_desktop=tab&show_copy_link=true"
+            title="Tenacity - Home of Storage"
+            frameborder="0"
+            loading="lazy"
+            webkitallowfullscreen
+            mozallowfullscreen
+            allowfullscreen
+            allow="clipboard-write"
+          ></iframe>
+        </div>
+        <!--ARCADE EMBED END-->
+      </div>
     </div>
     <div id="third-section">
       <img src="/static/icons/review.png" alt="Review Icon" loading="lazy" />
