Fixing a bug with the images

--- a/User Auth/templates/index.html
+++ b/User Auth/templates/index.html
@@ -95,37 +95,36 @@
         <button onclick="window.location.href='/register'">Sign Up</button>
       </div>
     </div>
-    <div
-      style="
-        position: relative;
-        padding-bottom: calc(47.364568081991216% + 41px);
-        height: 0;
-        width: 100%;
-      "
-    >
-      <div id="demo">
-        <!--ARCADE EMBED START-->
-        <div
+    <div id="demo">
+      <!--ARCADE EMBED START-->
+      <div
+        style="
+          position: relative;
+          padding-bottom: calc(47.364568081991216% + 41px);
+          height: 0;
+          width: 100%;
+        "
+      >
+        <iframe
+          src="https://demo.arcade.software/U1IhFrdvOVQUdHQM26OA?embed&embed_mobile=tab&embed_desktop=tab&show_copy_link=true"
+          title="Tenacity - Home of Storage"
+          frameborder="0"
+          loading="lazy"
+          webkitallowfullscreen
+          mozallowfullscreen
+          allowfullscreen
+          allow="clipboard-write"
           style="
-            position: relative;
-            padding-bottom: calc(47.364568081991216% + 41px);
-            height: 0;
+            position: absolute;
+            top: 0;
+            left: 0;
             width: 100%;
+            height: 100%;
+            color-scheme: light;
           "
-        >
-          <iframe
-            src="https://demo.arcade.software/U1IhFrdvOVQUdHQM26OA?embed&embed_mobile=tab&embed_desktop=tab&show_copy_link=true"
-            title="Tenacity - Home of Storage"
-            frameborder="0"
-            loading="lazy"
-            webkitallowfullscreen
-            mozallowfullscreen
-            allowfullscreen
-            allow="clipboard-write"
-          ></iframe>
-        </div>
-        <!--ARCADE EMBED END-->
+        ></iframe>
       </div>
+      <!--ARCADE EMBED END-->
     </div>
     <div id="third-section">
       <img src="/static/icons/review.png" alt="Review Icon" loading="lazy" />
