--- a/User Auth/templates/index.html
+++ b/User Auth/templates/index.html
@@ -96,6 +96,13 @@
       </div>
     </div>
     <div id="demo">
+      <div id="demo_left">
+        <h1>
+          "Take the first step toward joining the Tenacians — test out our
+          platform with a hands-on demo."
+        </h1>
+        <button>Try it out ➜</button>
+      </div>
       <!--ARCADE EMBED START-->
       <div
         style="
@@ -114,14 +121,6 @@
           mozallowfullscreen
           allowfullscreen
           allow="clipboard-write"
-          style="
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            color-scheme: light;
-          "
         ></iframe>
       </div>
       <!--ARCADE EMBED END-->
