--- a/User Auth/static/css/styles.css
+++ b/User Auth/static/css/styles.css
@@ -318,6 +318,15 @@ span {
   background-color: #f57c04;
 }
 
+#demo {
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  height: 50vh;
+  margin-top: 15vh;
+  border: 3px solid red;
+}
+
 iframe {
   position: absolute;
   top: 0;
@@ -325,7 +334,6 @@ iframe {
   width: 100%;
   height: 100%;
   color-scheme: light;
-  margin-top: 15vh;
   border-radius: 0px;
   margin-bottom: 20vh;
 }
