--- a/User Auth/templates/index.html
+++ b/User Auth/templates/index.html
@@ -104,15 +104,18 @@
         <button>Try it out ➜</button>
       </div>
       <!--ARCADE EMBED START-->
-      <iframe
-        src="https://demo.arcade.software/U1IhFrdvOVQUdHQM26OA?embed&embed_mobile=tab&embed_desktop=tab&show_copy_link=true"
-        title="Tenacity - Home of Storage"
-        frameborder="0"
-        webkitallowfullscreen
-        mozallowfullscreen
-        allowfullscreen
-        allow="clipboard-write"
-      ></iframe>
+      <div style="position: relative">
+        <iframe
+          src="https://demo.arcade.software/U1IhFrdvOVQUdHQM26OA?embed&embed_mobile=tab&embed_desktop=tab&show_copy_link=true"
+          title="Tenacity - Home of Storage"
+          frameborder="0"
+          loading="lazy"
+          webkitallowfullscreen
+          mozallowfullscreen
+          allowfullscreen
+          allow="clipboard-write"
+        ></iframe>
+      </div>
       <!--ARCADE EMBED END-->
     </div>
     <div id="third-section">
