--- a/User Auth/templates/index.html
+++ b/User Auth/templates/index.html
@@ -104,7 +104,14 @@
         <button>Try it out ➜</button>
       </div>
       <!--ARCADE EMBED START-->
-      <div style="position: relative">
+      <div
+        style="
+          position: relative;
+          padding-bottom: calc(47.364568081991216% + 41px);
+          height: 0;
+          width: 50%;
+        "
+      >
         <iframe
           src="https://demo.arcade.software/U1IhFrdvOVQUdHQM26OA?embed&embed_mobile=tab&embed_desktop=tab&show_copy_link=true"
           title="Tenacity - Home of Storage"
