--- a/User Auth/templates/index.html
+++ b/User Auth/templates/index.html
@@ -105,12 +105,7 @@
       </div>
       <!--ARCADE EMBED START-->
       <div
-        style="
-          position: relative;
-          padding-bottom: calc(47.364568081991216% + 41px);
-          height: 0;
-          width: 50%;
-        "
+        style="position: relative; padding-bottom: 0px; height: 0; width: 100%"
       >
         <iframe
           src="https://demo.arcade.software/U1IhFrdvOVQUdHQM26OA?embed&embed_mobile=tab&embed_desktop=tab&show_copy_link=true"
