Fixing product logo

--- a/User Auth/templates/index.html
+++ b/User Auth/templates/index.html
@@ -78,10 +78,10 @@
       </button>
     </div>
     <a
-      href="https://www.producthunt.com/products/tenacity/reviews?utm_source=badge-product_review&utm_medium=badge&utm_souce=badge-tenacity"
+      href="https://www.producthunt.com/products/tenacity?utm_source=badge-follow&utm_medium=badge&utm_souce=badge-tenacity"
       target="_blank"
       ><img
-        src="https://api.producthunt.com/widgets/embed-image/v1/product_review.svg?product_id=1051881&theme=light"
+        src="https://api.producthunt.com/widgets/embed-image/v1/follow.svg?product_id=1051881&theme=light"
         alt="Tenacity - Simple&#0032;and&#0032;concise&#0032;cloud&#0032;storage&#0032;platform&#0046; | Product Hunt"
         style="width: 250px; height: 54px"
         width="250"
