--- a/User Auth/templates/index.html
+++ b/User Auth/templates/index.html
@@ -44,6 +44,17 @@
     <title>Tenacity</title>
   </head>
   <body>
+    <a
+      href="https://www.producthunt.com/products/tenacity?utm_source=badge-follow&utm_medium=badge&utm_souce=badge-tenacity"
+      target="_blank"
+      ><img
+        src="https://api.producthunt.com/widgets/embed-image/v1/follow.svg?product_id=1051881&theme=light"
+        alt="Tenacity - Simple&#0032;and&#0032;concise&#0032;cloud&#0032;storage&#0032;platform&#0046; | Product Hunt"
+        style="width: 250px; height: 54px"
+        class="fixed-badge"
+        width="250"
+        height="54"
+    /></a>
     <div class="header">
       <h1 id="title" onclick="window.location.href='/'">Tenacity</h1>
       <h2 id="motto">"Save, Innovate, Create"</h2>
@@ -77,16 +88,6 @@
         Start your journey
       </button>
     </div>
-    <a
-      href="https://www.producthunt.com/products/tenacity?utm_source=badge-follow&utm_medium=badge&utm_souce=badge-tenacity"
-      target="_blank"
-      ><img
-        src="https://api.producthunt.com/widgets/embed-image/v1/follow.svg?product_id=1051881&theme=light"
-        alt="Tenacity - Simple&#0032;and&#0032;concise&#0032;cloud&#0032;storage&#0032;platform&#0046; | Product Hunt"
-        style="width: 250px; height: 54px"
-        width="250"
-        height="54"
-    /></a>
     <div id="second-section">
       <video autoplay="" loop="" muted="" id="video" class="fade-in-1">
         <source
