--- a/User Auth/templates/index.html
+++ b/User Auth/templates/index.html
@@ -45,14 +45,14 @@
   </head>
   <body>
     <a
-      href="https://www.producthunt.com/products/tenacity?utm_source=badge-follow&utm_medium=badge&utm_souce=badge-tenacity"
+      href="https://www.producthunt.com/posts/tenacity?embed=true&utm_source=badge-featured&utm_medium=badge&utm_souce=badge-tenacity"
       target="_blank"
       ><img
-        src="https://api.producthunt.com/widgets/embed-image/v1/follow.svg?product_id=1051881&theme=light"
+        src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=949129&theme=light&t=1744580929840"
         alt="Tenacity - Simple&#0032;and&#0032;concise&#0032;cloud&#0032;storage&#0032;platform&#0046; | Product Hunt"
         style="width: 250px; height: 54px"
-        class="fixed-badge"
         width="250"
+        class="fixed-badge"
         height="54"
     /></a>
     <div class="header">
