Adding a bit of padding

--- a/User Auth/templates/dashboard.html
+++ b/User Auth/templates/dashboard.html
@@ -71,7 +71,10 @@
           <img src="{{ url_for('static', filename='icons/upload.png') }}" />
           <a onclick="window.location.href='/files'">Upload</a>
         </div>
-        <a class="others1" onclick="window.location.href='/logout'"
+        <a
+          class="others1"
+          onclick="window.location.href='/logout'"
+          style="margin-top: 35vh"
           ><span>Log Out</span>➜]</a
         >
       </div>
