--- a/User Auth/templates/files.html
+++ b/User Auth/templates/files.html
@@ -73,7 +73,7 @@
       </div>
       <div id="main-content">
         <div id="header">
-          <input id="fade-in-1" placeholder="Search Files..." />
+          <input type="search" id="fade-in-1" placeholder="Search Files..." />
           <select id="sort-options" tooltip="Sort Files">
             <option value="date" id="fade-in-2">Date</option>
             <option value="name" id="fade-in-2">Name</option>
