--- a/User Auth/templates/home.html
+++ b/User Auth/templates/home.html
@@ -77,7 +77,7 @@
       </div>
       <div id="main-content">
         <div id="header">
-          <input placeholder="Search Files..." />
+          <input type="search" placeholder="Search Files..." />
         </div>
         <div id="option-container">
           <h1>Ciao👋! <span>What can I do for you?</span></h1>
