--- a/User Auth/templates/dashboard.html
+++ b/User Auth/templates/dashboard.html
@@ -81,7 +81,7 @@
     </div>
     <div id="main-content">
       <div id="header">
-        <input type="search" class="fade-in-1" placeholder="Search Files..." />
+        <input class="fade-in-1" placeholder="Search Files..." />
       </div>
       <div id="content-pane">
         <div id="left-panel" class="fade-in-2">
