--- a/User Auth/templates/home.html
+++ b/User Auth/templates/home.html
@@ -77,7 +77,7 @@
       </div>
       <div id="main-content">
         <div id="header">
-          <input placeholder="Search Files..." />
+          <input class="fade-in-1" placeholder="Search Files..." />
         </div>
         <div id="option-container">
           <h1>Ciao👋! <span>What can I do for you?</span></h1>
@@ -99,5 +99,6 @@
     <div id="decoration-1"></div>
     <div id="decoration-2"></div>
     <div id="decoration-3"></div>
+    <script src="{{ url_for('static', filename='javascript/home.js') }}"></script>
   </body>
 </html>
