Fixing discord issue

--- a/User Auth/templates/home.html
+++ b/User Auth/templates/home.html
@@ -92,7 +92,7 @@
     </div>
     <div
       id="comment"
-      onclick="window.open('https://discord.gg/MHYVsQbM', '_blank')"
+      onclick="window.open('https://discord.gg/WDvcCbj2', '_blank')"
     >
       <img src="{{ url_for('static', filename='icons/comments.png') }}" />
     </div>
