Modifying sign up button

--- a/User Auth/templates/index.html
+++ b/User Auth/templates/index.html
@@ -103,7 +103,11 @@
           Store files online and retrieve them from any device with an internet
           connection, anywhere, anytime.
         </p>
-        <button onclick="window.location.href='/register'">Sign Up</button>
+        <div class="box-3" onclick="window.location.href='/register'">
+          <div class="btn btn-three">
+            <span>HOVER ME</span>
+          </div>
+        </div>
       </div>
     </div>
     <div id="third-section">
