--- a/User Auth/static/css/styles.css
+++ b/User Auth/static/css/styles.css
@@ -332,8 +332,8 @@ btn-three {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 300px;
+  height: 70px;
   z-index: 1;
   background-color: rgba(255, 255, 255, 0.1);
   transition: all 0.3s;
@@ -347,8 +347,8 @@ btn-three {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 300px;
+  height: 70px;
   z-index: 1;
   opacity: 0;
   transition: all 0.3s;
@@ -359,20 +359,6 @@ btn-three {
 .btn-three:hover::after {
   opacity: 1;
   transform: scale(1, 1);
-}
-
-#second-section div button {
-  width: 8vw;
-  height: 6vh;
-  padding: 10px;
-  margin-top: 20px;
-  background-color: #ff6f00;
-  border: 2px solid black;
-  border-radius: 5px;
-  font-family: "Google Sans", Arial, Helvetica, sans-serif;
-  font-size: 1em;
-  cursor: pointer;
-  transition: 0.3s ease;
 }
 
 #second-section div button:hover {
