--- a/User Auth/static/css/styles.css
+++ b/User Auth/static/css/styles.css
@@ -315,6 +315,9 @@ div[class*="box"] {
 }
 
 .btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   line-height: 50px;
   height: 50px;
   text-align: center;
