--- a/User Auth/templates/index.html
+++ b/User Auth/templates/index.html
@@ -105,7 +105,7 @@
         </p>
         <div class="box-3" onclick="window.location.href='/register'">
           <div class="btn btn-three">
-            <span>HOVER ME</span>
+            <span>Sign Up</span>
           </div>
         </div>
       </div>
