--- a/User Auth/static/css/styles.css
+++ b/User Auth/static/css/styles.css
@@ -318,10 +318,8 @@ div[class*="box"] {
   display: flex;
   justify-content: center;
   align-items: center;
-  line-height: 50px;
-  height: 50px;
-  text-align: center;
-  width: 250px;
+  height: 70px; /* Match the height of the parent */
+  width: 300px; /* Match the width of the parent */
   cursor: pointer;
 }
 
@@ -329,32 +327,36 @@ div[class*="box"] {
   color: #fff;
   transition: all 0.5s;
   position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%; /* Ensure it fills the parent */
+  width: 100%; /* Ensure it fills the parent */
 }
-.btn-three::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 300px;
-  height: 70px;
-  z-index: 1;
-  background-color: rgba(255, 255, 255, 0.1);
-  transition: all 0.3s;
-}
-.btn-three:hover::before {
-  opacity: 0;
-  transform: scale(0.5, 0.5);
-}
+
+.btn-three::before,
 .btn-three::after {
   content: "";
   position: absolute;
   top: 0;
   left: 0;
-  width: 300px;
-  height: 70px;
+  width: 100%;
+  height: 100%;
   z-index: 1;
-  opacity: 0;
   transition: all 0.3s;
+}
+
+.btn-three::before {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.btn-three:hover::before {
+  opacity: 0;
+  transform: scale(0.5, 0.5);
+}
+
+.btn-three::after {
+  opacity: 0;
   border: 1px solid rgba(255, 255, 255, 0.5);
   transform: scale(1.2, 1.2);
 }
