--- a/User Auth/static/css/styles.css
+++ b/User Auth/static/css/styles.css
@@ -344,10 +344,16 @@ div[class*="box"] {
   height: 100%;
   z-index: 1;
   transition: all 0.3s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .btn-three::before {
   background-color: rgba(255, 255, 255, 0.1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .btn-three:hover::before {
