--- a/User Auth/static/css/styles.css
+++ b/User Auth/static/css/styles.css
@@ -307,34 +307,49 @@ span {
 }
 
 div[class*="box"] {
-  height: 70px;
+  height: 100px;
   width: 300px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
+.box-3 {
+  background-color: #66a182;
+}
 
 .btn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 70px; /* Match the height of the parent */
-  width: 300px; /* Match the width of the parent */
+  line-height: 50px;
+  height: 50px;
+  text-align: center;
+  width: 250px;
   cursor: pointer;
 }
 
+/* 
+========================
+      BUTTON THREE
+========================
+*/
 .btn-three {
   color: #fff;
   transition: all 0.5s;
   position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%; /* Ensure it fills the parent */
-  width: 100%; /* Ensure it fills the parent */
 }
-
-.btn-three::before,
+.btn-three::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background-color: rgba(255, 255, 255, 0.1);
+  transition: all 0.3s;
+}
+.btn-three:hover::before {
+  opacity: 0;
+  transform: scale(0.5, 0.5);
+}
 .btn-three::after {
   content: "";
   position: absolute;
@@ -343,30 +358,11 @@ div[class*="box"] {
   width: 100%;
   height: 100%;
   z-index: 1;
+  opacity: 0;
   transition: all 0.3s;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.btn-three::before {
-  background-color: rgba(255, 255, 255, 0.1);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.btn-three:hover::before {
-  opacity: 0;
-  transform: scale(0.5, 0.5);
-}
-
-.btn-three::after {
-  opacity: 0;
   border: 1px solid rgba(255, 255, 255, 0.5);
   transform: scale(1.2, 1.2);
 }
-
 .btn-three:hover::after {
   opacity: 1;
   transform: scale(1, 1);
