--- a/User Auth/templates/index.html
+++ b/User Auth/templates/index.html
@@ -103,9 +103,9 @@
           Store files online and retrieve them from any device with an internet
           connection, anywhere, anytime.
         </p>
-        <div class="box-3" onclick="window.location.href='/register'">
+        <div class="box-3">
           <div class="btn btn-three">
-            <h2>Sign Up</h2>
+            <span>Sign Up</span>
           </div>
         </div>
       </div>
