--- a/User Auth/templates/index.html
+++ b/User Auth/templates/index.html
@@ -103,11 +103,7 @@
           Store files online and retrieve them from any device with an internet
           connection, anywhere, anytime.
         </p>
-        <div class="box-3">
-          <div class="btn btn-three">
-            <span>Sign Up</span>
-          </div>
-        </div>
+        <button onclick="window.location.href='/register'">Sign Up</button>
       </div>
     </div>
     <div id="third-section">
