--- a/User Auth/static/css/styles.css
+++ b/User Auth/static/css/styles.css
@@ -306,76 +306,18 @@ span {
   margin-top: 10px;
 }
 
-.box-3 {
-  border: 3px solid red;
-  height: 100px;
-  width: 300px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.btn {
-  line-height: 50px;
-  height: 50px;
-  text-align: center;
-  width: 250px;
+#second-section div button {
+  width: 8vw;
+  height: 6vh;
+  padding: 10px;
+  margin-top: 20px;
+  background-color: #ff6f00;
+  border: 2px solid black;
+  border-radius: 5px;
+  font-family: "Google Sans", Arial, Helvetica, sans-serif;
+  font-size: 1em;
   cursor: pointer;
-  border: 3px solid yellow;
-}
-
-/* 
-========================
-      BUTTON THREE
-========================
-*/
-.btn-three {
-  color: #fff;
-  transition: all 0.5s;
-  position: relative;
-  border: 3px solid green;
-}
-.btn-three::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
-  background-color: rgba(255, 255, 255, 0.1);
-  transition: all 0.3s;
-}
-.btn-three:hover::before {
-  opacity: 0;
-  transform: scale(0.5, 0.5);
-}
-.btn-three::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
-  opacity: 0;
-  transition: all 0.3s;
-  border: 1px solid rgba(255, 255, 255, 0.5);
-  transform: scale(1.2, 1.2);
-}
-.btn-three:hover::after {
-  opacity: 1;
-  transform: scale(1, 1);
-}
-
-#third-section {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 60vh;
-  margin-top: 25vh;
+  transition: 0.3s ease;
 }
 
 #third-section img {
