--- a/User Auth/static/css/styles.css
+++ b/User Auth/static/css/styles.css
@@ -320,6 +320,21 @@ span {
   transition: 0.3s ease;
 }
 
+#second-section div button:hover {
+  transform: translateX(10px);
+  background-color: #f57c04;
+}
+
+#third-section {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 60vh;
+  margin-top: 25vh;
+}
+
 #third-section img {
   transform: scale(1.5);
 }
