--- a/User Auth/templates/index.html
+++ b/User Auth/templates/index.html
@@ -56,7 +56,12 @@
         height="54"
     /></a>
     <div class="header">
-      <h1 id="title" onclick="window.location.href='/'">Tenacity</h1>
+      <img
+        src="/static/icons/tenacity_logo.png"
+        alt="Tenacity Icon"
+        id="tenacity_logo"
+      />
+      <!--<h1 id="title" onclick="window.location.href='/'">Tenacity</h1> -->
       <h2 id="motto">"Save, Innovate, Create"</h2>
       <button
         id="log-in"
