Back to original

--- a/User Auth/templates/index.html
+++ b/User Auth/templates/index.html
@@ -56,12 +56,7 @@
         height="54"
     /></a>
     <div class="header">
-      <img
-        src="/static/icons/tenacity_logo.png"
-        alt="Tenacity Icon"
-        id="tenacity_logo"
-      />
-      <!--<h1 id="title" onclick="window.location.href='/'">Tenacity</h1> -->
+      <h1 id="title" onclick="window.location.href='/'">Tenacity</h1>
       <h2 id="motto">"Save, Innovate, Create"</h2>
       <button
         id="log-in"
