--- a/User Auth/templates/index.html
+++ b/User Auth/templates/index.html
@@ -28,7 +28,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Google+sans|Lobster|Roboto"
     />
-    <link rel="icon" href="/static/icons/Tenacity_logo.png" type="image/png" />
+    <link rel="icon" href="/static/icons/logo.png" type="image/png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Itim&amp;family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&amp;family=Lora:ital,wght@0,400..700;1,400..700&amp;family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&amp;family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&amp;family=Sour+Gummy:ital,wght@0,100..900;1,100..900&amp;display=swap"
       rel="stylesheet"
