--- a/User Auth/templates/index.html
+++ b/User Auth/templates/index.html
@@ -13,11 +13,11 @@
     />
     <meta
       name="description"
-      content="Boost productivity with Tenacity – your all-in-one project management platform designed for teams of all sizes. Plan, collaborate, and deliver efficiently."
+      content="Tenacity Cloud offers free, secure cloud storage with end-to-end encryption. Store, share, and access files anywhere. Try Tenacity Cloud Storage today!"
     />
     <meta
       name="keywords"
-      content="project management, productivity, Tenacity, team collaboration, cloud, free cloud storage, tenacity website"
+      content="Tenacity Cloud Storage, Tenacity Cloud, Tenacity, free cloud storage, secure file sharing, cloud storage online, Tenacity file upload"
     />
     <link rel="stylesheet" href="/static/css/styles.css" />
     <link
@@ -46,7 +46,9 @@
       href="https://fonts.googleapis.com/css2?family=Itim&amp;family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&amp;family=Lora:ital,wght@0,400..700;1,400..700&amp;family=Open+Sans:ital,wght@0,300..800;1,300..800&amp;family=Playwrite+HR+Lijeva:wght@100..400&amp;family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&amp;family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&amp;family=Sour+Gummy:ital,wght@0,100..900;1,100..900&amp;display=swap"
       rel="stylesheet"
     />
-    <title>Tenacity | Simplify Your Project Management Workflow</title>
+    <title>
+      Tenacity Cloud Storage | Secure File Sharing & Free Cloud Storage
+    </title>
   </head>
   <body>
     <a
