--- a/User Auth/templates/index.html
+++ b/User Auth/templates/index.html
@@ -7,6 +7,20 @@
       content="UhdTP_wRYGTbWETi_gbgGR1wZHrnn30aseXwR7PUgZU"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Tenacity",
+        "url": "https://www.tenacity.ct.ws",
+        "logo": "https://www.tenacity.ct.ws/static/icons/logo.png",
+        "sameAs": [
+          "https://x.com/Tenacity_Cloud",
+          "https://www.reddit.com/user/NaiveSpare2680/",
+          "https://betalist.com/@Tenacity_Cloud"
+        ]
+      }
+    </script>
     <meta
       name="title"
       content="Tenacity | Simplify Your Project Management Workflow"
