--- a/User Auth/templates/index.html
+++ b/User Auth/templates/index.html
@@ -91,7 +91,8 @@
         height="54"
     /></a>
     <div class="header">
-      <h1 id="title" onclick="window.location.href='/'">Tenacity</h1>
+      <h1 id="title">
+        <a href="/" style="text-decoration: none; color: inherit;">Tenacity</a>
       <h2 id="motto">"Save, Innovate, Create"</h2>
       <button
         id="log-in"
