--- a/User Auth/templates/index.html
+++ b/User Auth/templates/index.html
@@ -35,17 +35,14 @@
         ]
       }
     </script>
-    <meta
-      name="title"
-      content="Tenacity | Simplify Your Project Management Workflow"
-    />
+    <meta name="title" content="100GB Free Storage | Tenacity Cloud Storage" />
     <meta
       name="description"
-      content="Tenacity Cloud offers free, secure cloud storage with end-to-end encryption. Store, share, and access files anywhere. Try Tenacity Cloud Storage today!"
+      content="Tenacity Cloud offers free, 100GB, secure cloud storage with end-to-end encryption. Store, share, and access files anywhere. Try Tenacity Cloud Storage today!"
     />
     <meta
       name="keywords"
-      content="Tenacity Cloud Storage, Tenacity Cloud, Tenacity, free cloud storage, secure file sharing, cloud storage online, Tenacity file upload"
+      content="Tenacity Cloud Storage, Tenacity Cloud, Tenacity, free cloud storage 100gb, secure file sharing, cloud storage online, Tenacity file upload"
     />
     <link rel="stylesheet" href="/static/css/styles.css" />
     <link
@@ -92,14 +89,17 @@
     /></a>
     <div class="header">
       <h1 id="title">
-        <a href="/" style="text-decoration: none; color: inherit;">Tenacity</a>
+        <a href="/" style="text-decoration: none; color: inherit">Tenacity</a>
+      </h1>
       <h2 id="motto">"Save, Innovate, Create"</h2>
       <button
         id="log-in"
         class="log-in"
-        onclick="window.location.href='/login'"
+        onclick="window.location.href='/register'"
       >
-        Log In
+        <a href="/login" style="text-decoration: none; color: inherit"
+          >Log In</a
+        >
       </button>
     </div>
     <div id="main-section" class="fade-in-1">
@@ -121,7 +121,9 @@
         onclick="window.location.href='/register'"
         class="fade-in-3"
       >
-        Start your journey
+        <a href="/register" style="text-decoration: none; color: inherit"
+          >Start your journey</a
+        >
       </button>
     </div>
     <div id="second-section">
@@ -136,10 +138,14 @@
       <div>
         <h1>Seamless, Secure</h1>
         <p>
-          Store files online and retrieve them from any device with an internet
-          connection, anywhere, anytime.
+          Store 100GB of files online and retrieve them from any device with an
+          internet connection, anywhere, anytime.
         </p>
-        <button onclick="window.location.href='/register'">Sign Up</button>
+        <button onclick="window.location.href='/register'">
+          <a href="/register" style="text-decoration: none; color: inherit"
+            >Sign Up</a
+          >
+        </button>
       </div>
     </div>
     <div id="third-section">
